--- a/index.html
+++ b/index.html
@@ -2,100 +2,79 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SkillCraft Task 01</title>
+  <title>SkillCraft Landing Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- CSS Link -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- NAVBAR -->
- <nav id="navbar">
+<header id="navbar">
   <div class="logo">SkillCraft</div>
-
   <ul class="nav-links">
     <li><a href="#home">Home</a></li>
     <li><a href="#about">About</a></li>
     <li><a href="#services">Services</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
-</nav>s
+</header>
 
 <!-- HOME SECTION -->
-<section id="home" class="section home">
+<section id="home" class="section">
   <h1>Welcome To SkillCraft Technology</h1>
-  <p>Build Responsive and Interactive Web Pages.<br>Join SkillCraft Technology with expert guidance and real-world project experience.
-  </p>
-  <button>Start Learning</button>
+  <p>Join SkillCraft Technology and gain practical skills with real-world project experience.</p>
+  <a href="#services" class="home-btn">Start Learning</a>
 </section>
 
 <!-- ABOUT SECTION -->
 <section id="about" class="section">
-  <h2>About SkillCraft Technology</h2>
-
+  <h1>About SkillCraft Technology</h1>
   <p>
-    SkillCraft Technology is a learning-driven platform that focuses on 
-    empowering students through practical training and real-world projects. 
-    We provide internship programs that help learners develop technical skills, 
-    gain hands-on experience, and prepare for professional careers.
+    SkillCraft Technology is a professional learning platform that helps students develop
+    real-world technical skills through hands-on training, live projects, and expert mentoring.
+    Our mission is to prepare students for industry-level careers.
   </p>
 
-  <p>
-    Our goal is to bridge the gap between academic knowledge and industry 
-    requirements by offering guided mentorship and project-based learning.
-  </p>
+  <div class="cards">
+    <div class="card">✔ Practical Training</div>
+    <div class="card">✔ Live Projects</div>
+    <div class="card">✔ Industry Experts</div>
+    <div class="card">✔ Career Support</div>
+  </div>
 </section>
 
 <!-- SERVICES SECTION -->
 <section id="services" class="section">
-  <h2>Our Services</h2>
+  <h1>Our Services</h1>
 
-  <div class="services-container">
-
-    <div class="service-card">
-      <h3>Web Development</h3>
-      <p>Design and develop responsive websites using modern technologies.</p>
-    </div>
-
-    <div class="service-card">
-      <h3>App Development</h3>
-      <p>Build Android and iOS applications with industry-level practices.</p>
-    </div>
-
-    <div class="service-card">
-      <h3>AI Projects</h3>
-      <p>Work on artificial intelligence based real-time projects.</p>
-    </div>
-
-    <div class="service-card">
-      <h3>Internship Training</h3>
-      <p>Gain practical experience through guided internship programs.</p>
-    </div>
-
+  <div class="cards">
+    <div class="card">🌐 Web Development Training</div>
+    <div class="card">📱 Mobile App Development</div>
+    <div class="card">🤖 Artificial Intelligence</div>
+    <div class="card">📊 Data Science</div>
+    <div class="card">☁ Cloud Computing</div>
+    <div class="card">🔐 Cyber Security</div>
+    <div class="card">🎯 Internship Programs</div>
+    <div class="card">🧠 Project Mentorship</div>
   </div>
 </section>
 
 <!-- CONTACT SECTION -->
-<section id="contact" class="section contact">
-  <h2>Contact Us</h2>
+<section id="contact" class="section">
+  <h1>Contact Us</h1>
 
-  <p>Have questions or need support? Feel free to reach out to us.</p>
+  <p>Email: skillcraft@gmail.com</p>
+  <p>Phone: +91 9876543210</p>
+  <p>Location: Hyderabad, India</p>
 
-  <div class="contact-box">
-    <p><strong>Email:</strong> support@skillcrafttechnology.com</p>
-    <p><strong>Phone:</strong> +91 98765 43210</p>
-    <p><strong>Location:</strong> India</p>
-  </div>
+  <form class="contact-form">
+    <input type="text" placeholder="Your Name" required>
+    <input type="email" placeholder="Your Email" required>
+    <br>
+    <button type="submit">SUBMIT</button>
+  </form>
 </section>
 
-<!-- FOOTER -->
-<footer>
-  <p>© 2026 SkillCraft Technology | Internship Task</p>
-</footer>
-
-<!-- JS Link -->
 <script src="script.js"></script>
-
 </body>
 </html>
